# seaweed_algebra

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
tests/: test_example.py
